--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
 	height: 375px;
 	background-color: #666;
 }
+#imgLayer{
+	width: 500px;
+	height: 375px;
+	background-color: #666;
+}
+	
 </style>
 </head>
  
 <body>
 <div id="container">
+	<img src="freecodecamp.png" alt="freecodecamp-logo" id='imgLayer'/>
 	<video autoplay="true" id="videoElement">
 	
 	</video>
