--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  
 <body>
 <div id="container">
-	<img src="freecodecamp.png" alt="freecodecamp-logo" id='imgLayer'/>
+	<img src="https://en.wikipedia.org/wiki/Dragon#/media/File:Friedrich-Johann-Justin-Bertuch_Mythical-Creature-Dragon_1806.jpg" alt="freecodecamp-logo" id='imgLayer'/>
 	<video autoplay="true" id="videoElement">
 	
 	</video>
