--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<video autoplay="true" id="videoElement">
 	
 	</video>
-	<img src="https://en.wikipedia.org/wiki/Dragon#/media/File:Friedrich-Johann-Justin-Bertuch_Mythical-Creature-Dragon_1806.jpg" alt="freecodecamp-logo" id='imgLayer'/>
+	<img src="https://en.wikipedia.org/wiki/Dragon#/media/File:Friedrich-Johann-Justin-Bertuch_Mythical-Creature-Dragon_1806.jpg" alt="unloaded.." id='imgLayer'/>
 
 </div>
 <script>
