--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<video autoplay="true" id="videoElement">
 	
 	</video>
-	<img src="https://en.wikipedia.org/wiki/Dragon#/media/File:Friedrich-Johann-Justin-Bertuch_Mythical-Creature-Dragon_1806.jpg" alt="unloaded.." id='imgLayer'/>
+	<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F6%2F2020%2F12%2F03%2FHouse-of-the-Dragon-2.jpeg" alt="unloaded.." id='imgLayer'/>
 
 </div>
 <script>
