--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
             z-index: 1;
 
         }
+
+        #optionMenu {
+            width: auto;
+            height: auto;
+            position: absolute;
+            top: 0;
+            left: 1%;
+            z-index: 1;
+        }
     </style>
 </head>
 
@@ -42,13 +51,22 @@
         </video>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F6%2F2020%2F12%2F03%2FHouse-of-the-Dragon-2.jpeg"
             alt="unloaded.." id='imgLayer' />
-        <input type="text" id="imgUrl">
-        <button onclick="updateImage()"> click</button>
+
+        <div id="optionMenu">
+            <input type="text" id="imgUrl">
+            <button onclick="updateImage()"> Load</button>
+            <button onclick="setZoom()" id="zoomBtn">OFF</button>
+            <input type="range" min="0" max="100" step="1" value="20" onchange="setOpacity(this.value)">
+        </div>
+
+
+
 
     </div>
 
     <script>
         var video = document.querySelector("#videoElement");
+        var activeZoom = "off"
 
         if (navigator.mediaDevices.getUserMedia) {
             navigator.mediaDevices.getUserMedia({ video: true })
@@ -61,9 +79,29 @@
         }
 
         function updateImage() {
-            url = document.getElementById("imgUrl").value
+            var url = document.getElementById("imgUrl").value
             console.log(url)
-            imgPlace = document.getElementById("imgLayer").src = url
+            document.getElementById("imgLayer").src = url
+        }
+        function setZoom() {
+            var zoomBtn = document.getElementById("zoomBtn")
+
+            if (activeZoom == "camera") {
+                activeZoom = "image"
+                zoomBtn.innerHTML = "IMG"
+            }
+            else if (activeZoom == "image") {
+                activeZoom = "off"
+                zoomBtn.innerHTML = "OFF"
+            }
+            else {
+                activeZoom = "camera"
+                zoomBtn.innerHTML = "CAM"
+            }
+        }
+
+        function setOpacity(value) {
+            document.getElementById("imgLayer").style.opacity = value / 100
         }
 
     </script>
