--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Display Webcam Stream</title>
 
@@ -66,6 +67,9 @@
 
     <script>
         var video = document.querySelector("#videoElement");
+        if (video.requestFullscreen) {
+            video.webkitRequestFullscreen()
+        }
         var activeZoom = "off"
 
         if (navigator.mediaDevices.getUserMedia) {
