--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             position: relative;
             left: 3%;
             display: inline;
+            z-index: 5;
         }
     </style>
 </head>
