--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         #videoElement {
             width: 100%;
             height: 100%;
-            /* background-color: #666; */
         }
+
+        /* background-color: #666; */
 
         #imgLayer {
             width: 100%;
@@ -84,12 +85,24 @@
         var activeZoom = "off"
 
         if (navigator.mediaDevices.getUserMedia) {
-            navigator.mediaDevices.getUserMedia({ video: true })
+
+            // navigator.mediaDevices.getUserMedia({
+            //     video: true
+            // })
+            //     .then(function (stream) {
+            //         video.srcObject = stream;
+            //     })
+            //     .catch(function (err0r) {
+            //         console.log("Something went wrong!");
+            //     });
+            navigator.mediaDevices.getUserMedia({
+                video: {
+                    facingMode: { exact: "environment" }
+                }
+            })
                 .then(function (stream) {
-                    video.srcObject = stream;
-                })
-                .catch(function (err0r) {
-                    console.log("Something went wrong!");
+                    video.src = window.URL.createObjectURL(stream);
+                    video.play();
                 });
         }
 
