--- a/index.html
+++ b/index.html
@@ -84,25 +84,33 @@
         var video = document.querySelector("#videoElement");
         var activeZoom = "off"
 
+        const constraint = {
+            video: {
+                width: {
+                    min: 1280,
+                    ideal: 1920,
+                    max: 2560,
+                },
+                height: {
+                    min: 720,
+                    ideal: 1080,
+                    max: 1440
+                },
+                facingMode: {
+                    exact: 'environment'
+                }
+            }
+        }
+
+
         if (navigator.mediaDevices.getUserMedia) {
 
-            // navigator.mediaDevices.getUserMedia({
-            //     video: true
-            // })
-            //     .then(function (stream) {
-            //         video.srcObject = stream;
-            //     })
-            //     .catch(function (err0r) {
-            //         console.log("Something went wrong!");
-            //     });
-            navigator.mediaDevices.getUserMedia({
-                video: {
-                    facingMode: { exact: "environment" }
-                }
-            })
+            navigator.mediaDevices.getUserMedia(constraint)
                 .then(function (stream) {
-                    video.src = window.URL.createObjectURL(stream);
-                    video.play();
+                    video.srcObject = stream;
+                })
+                .catch(function (err0r) {
+                    console.log("Something went wrong!");
                 });
         }
 
