--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             left: 3%;
             display: inline;
             z-index: 5;
+
         }
     </style>
 </head>
@@ -61,7 +62,6 @@
         <video autoplay="true" id="videoElement"></video>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F6%2F2020%2F12%2F03%2FHouse-of-the-Dragon-2.jpeg"
             alt="unloaded.." id='imgLayer' />
-
 
     </div>
     <div id="optionButton">
@@ -74,7 +74,7 @@
             <button onclick="updateImage()"> Load</button>
             <button onclick="setZoom()" id="zoomBtn">OFF</button>
             <input type="range" min="0" max="100" step="1" value="20" onchange="setOpacity(this.value)">
-            <input type="range" min="1" max="10" step="1" value="1" onchange="setScale(this.value)">
+            <input type="range" min="1" max="5" step="0.1" value="1" onchange="setScale(this.value)">
         </div>
 
 
@@ -98,7 +98,7 @@
                     max: 1440
                 },
                 facingMode: {
-                    exact: 'enviroment'
+                    exact: 'user'
                 }
             }
         }
@@ -164,9 +164,76 @@
             else {
                 document.exitFullscreen()
             }
-
         }
 
+
+    </script>
+
+
+    <script>
+        var dragItem = document.querySelector("#imgLayer");
+        var container = document.querySelector("#container");
+
+        var active = false;
+        var currentX;
+        var currentY;
+        var initialX;
+        var initialY;
+        var xOffset = 0;
+        var yOffset = 0;
+
+        container.addEventListener("touchstart", dragStart, false);
+        container.addEventListener("touchend", dragEnd, false);
+        container.addEventListener("touchmove", drag, false);
+
+        container.addEventListener("mousedown", dragStart, false);
+        container.addEventListener("mouseup", dragEnd, false);
+        container.addEventListener("mousemove", drag, false);
+
+        function dragStart(e) {
+            if (e.type === "touchstart") {
+                initialX = e.touches[0].clientX - xOffset;
+                initialY = e.touches[0].clientY - yOffset;
+            } else {
+                initialX = e.clientX - xOffset;
+                initialY = e.clientY - yOffset;
+            }
+
+            if (e.target === dragItem) {
+                active = true;
+            }
+        }
+
+        function dragEnd(e) {
+            initialX = currentX;
+            initialY = currentY;
+
+            active = false;
+        }
+
+        function drag(e) {
+            if (active) {
+
+                e.preventDefault();
+
+                if (e.type === "touchmove") {
+                    currentX = e.touches[0].clientX - initialX;
+                    currentY = e.touches[0].clientY - initialY;
+                } else {
+                    currentX = e.clientX - initialX;
+                    currentY = e.clientY - initialY;
+                }
+
+                xOffset = currentX;
+                yOffset = currentY;
+
+                setTranslate(currentX, currentY, dragItem);
+            }
+        }
+
+        function setTranslate(xPos, yPos, el) {
+            el.style.transform = "translate3d(" + xPos + "px, " + yPos + "px, 0)";
+        }
     </script>
 </body>
 
