--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     max: 1440
                 },
                 facingMode: {
-                    exact: 'user'
+                    exact: 'environment'
                 }
             }
         }
