--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         /* background-color: #666; */
 
         #imgLayer {
-            width: 100%;
-            height: 100%;
+            width: auto;
+            height: auto;
             opacity: 0.5;
             position: absolute;
             top: 0;
