--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <button onclick="updateImage()"> Load</button>
             <button onclick="setZoom()" id="zoomBtn">OFF</button>
             <input type="range" min="0" max="100" step="1" value="20" onchange="setOpacity(this.value)">
-            <input type="range" min="1" max="5" step="0.1" value="1" onchange="setScale(this.value)">
+            <input type="range" min="0.1" max="5" step="0.1" value="1" onchange="setScale(this.value)">
         </div>
 
 
@@ -98,7 +98,7 @@
                     max: 1440
                 },
                 facingMode: {
-                    exact: 'environment'
+                    exact: 'user'
                 }
             }
         }
